# rust-gnark

./: LICENSE
.github/workflows/: build-and-test.yml  pre-release.yml  release.yml
crates/: Cargo.toml  build.rs
crates/src/: lib.rs
go/: go.mod  wrapper.go
go/cmd/gen_test_vectors/: main.go
tests/: Cargo.toml
tests/src/: lib.rs
